# s1gtrap.github.io

./: .gitignore  .gitmodules  CNAME  Cargo.toml  LICENSE  config.toml  hugo.toml  hugo_stats.json  index.html  index.js  package-lock.json  package.json  s1g.asc  tailwind.config.js  worker.js
.github/workflows/: deploy.yml
assets/css/: styles.css  styles.scss
content/: _index.md  cv.md  index.md  portfolio.md
content/cv/: _index.md
content/cv/education/: _index.md  bsc.md
content/cv/employment/: _index.md  stagewise.md  trifork.md
content/cv/skills/: _index.md  asm.md  assembly.md  c.md  cpp.md  css.md  docker.md  git.md  go.md  html.md  javascript.md  js.md  node.md  react.md  rust.md  scss.md  typescript.md  wasm.md  webassembly.md
content/portfolio/: _index.md  bad-directions.md  con2.md  dasha.md  homepage.md  llvm--2.md  popeye.md
content/section-a/: _index.md  subpage-1.md  subpage-2.md
content/section-b/: _index.md
data/: skills.json
layouts/: index.html
layouts/_default/: baseof.html  index.html  li.html  list.html  single.html
layouts/partials/: breadcrumb.html  header.html  nav.html  navbar.html  stars.html
layouts/shortcodes/: github.html  skills.html
layouts/skills/: li.html  list.html  single.html
pkg/: package.json  s1gtrap_github_io.d.ts  s1gtrap_github_io.js  s1gtrap_github_io_bg.wasm  s1gtrap_github_io_bg.wasm.d.ts  wasm_in_web_worker.d.ts  wasm_in_web_worker.js  wasm_in_web_worker_bg.wasm  wasm_in_web_worker_bg.wasm.d.ts
src/: lib.rs
static/: s1g.asc
www/: 404.html  index.html  worker.js
(+10 files in other folders)
