[package]
name = "wasm-in-web-worker"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
console_error_panic_hook = { version = "0.1.6" }
js-sys = "0.3.57"
log = "0.4.16"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]
