[package]
name = "s1gtrap-github-io"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
env_logger = "0.9"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]
